[gd_scene load_steps=68 format=3 uid="uid://bq3bs7j40w5n7"]

[ext_resource type="Script" uid="uid://dcd24g8m5fo81" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://rwd4lgj61wfx" path="res://assets/characters/player.png" id="2_qhqgy"]
[ext_resource type="AudioStream" uid="uid://bi3vti257fm2" path="res://assets/music/player_damage.mp3" id="3_qhqgy"]
[ext_resource type="Texture2D" uid="uid://b8boox7ieb7y2" path="res://assets/objects/exclamation-7x8.png" id="4_dqkch"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("2_qhqgy")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("2_qhqgy")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("2_qhqgy")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("2_qhqgy")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("2_qhqgy")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("2_qhqgy")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("2_qhqgy")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("2_qhqgy")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("2_qhqgy")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("2_qhqgy")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("2_qhqgy")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("2_qhqgy")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("2_qhqgy")
region = Rect2(240, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("2_qhqgy")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("2_qhqgy")
region = Rect2(96, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("2_qhqgy")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("2_qhqgy")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("2_qhqgy")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("2_qhqgy")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("2_qhqgy")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("2_qhqgy")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("2_qhqgy")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8cc"]
atlas = ExtResource("2_qhqgy")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_487ah"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ol"]
atlas = ExtResource("2_qhqgy")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj30b"]
atlas = ExtResource("2_qhqgy")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc3p3"]
atlas = ExtResource("2_qhqgy")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hax0n"]
atlas = ExtResource("2_qhqgy")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4otl"]
atlas = ExtResource("2_qhqgy")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2b1d"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs1tg"]
atlas = ExtResource("2_qhqgy")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dvfe"]
atlas = ExtResource("2_qhqgy")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_giy8y"]
atlas = ExtResource("2_qhqgy")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdfoy"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhpqf"]
atlas = ExtResource("2_qhqgy")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5jhy"]
atlas = ExtResource("2_qhqgy")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_holxr"]
atlas = ExtResource("2_qhqgy")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx1m4"]
atlas = ExtResource("2_qhqgy")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gjji"]
atlas = ExtResource("2_qhqgy")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2ulf"]
atlas = ExtResource("2_qhqgy")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e8lb"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gdjj"]
atlas = ExtResource("2_qhqgy")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc3ue"]
atlas = ExtResource("2_qhqgy")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxlsd"]
atlas = ExtResource("2_qhqgy")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha2mi"]
atlas = ExtResource("2_qhqgy")
region = Rect2(240, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_apa73"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}],
"loop": false,
"name": &"back_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}],
"loop": false,
"name": &"front_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8cc")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_487ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj30b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc3p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hax0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4otl")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2b1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs1tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dvfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giy8y")
}],
"loop": false,
"name": &"side_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdfoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhpqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5jhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_holxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx1m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gjji")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2ulf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e8lb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gdjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc3ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxlsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha2mi")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_g2els"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qhqgy"]
radius = 18.1108

[sub_resource type="AtlasTexture" id="AtlasTexture_apa73"]
atlas = ExtResource("4_dqkch")
region = Rect2(35, 0, 7, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_74r1k"]
atlas = ExtResource("4_dqkch")
region = Rect2(0, 0, 7, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_8svfe"]
atlas = ExtResource("4_dqkch")
region = Rect2(7, 0, 7, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a3c5"]
atlas = ExtResource("4_dqkch")
region = Rect2(14, 0, 7, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_42b1b"]
atlas = ExtResource("4_dqkch")
region = Rect2(21, 0, 7, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7ic4"]
atlas = ExtResource("4_dqkch")
region = Rect2(28, 0, 7, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_au7lq"]
atlas = ExtResource("4_dqkch")
region = Rect2(35, 0, 7, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_nubpm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_apa73")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 2.5,
"texture": SubResource("AtlasTexture_74r1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8svfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a3c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42b1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7ic4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au7lq")
}],
"loop": false,
"name": &"pop_up",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dqkch"]
bg_color = Color(0.165656, 0.165656, 0.165656, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.277607, 0.1912, 0.125635, 1)

[node name="player" type="CharacterBody2D" groups=["player"]]
y_sort_enabled = true
position = Vector2(0, -2)
collision_layer = 2
script = ExtResource("1_g2els")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 1)
scale = Vector2(1.02083, 1.02083)
sprite_frames = SubResource("SpriteFrames_apa73")
animation = &"front_idle"
offset = Vector2(0, -15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -1)
shape = SubResource("CircleShape2D_g2els")

[node name="world_camera" type="Camera2D" parent="."]
position = Vector2(0, 2)
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 1200
limit_bottom = 1039
limit_smoothed = true
rotation_smoothing_enabled = true

[node name="cemetery_camera" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 1168
limit_bottom = 1439
limit_smoothed = true
rotation_smoothing_enabled = true

[node name="myth_camera" type="Camera2D" parent="."]
position = Vector2(0, 2)
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 3805
limit_bottom = 653
limit_smoothed = true
rotation_smoothing_enabled = true

[node name="house_camera" type="Camera2D" parent="."]
position = Vector2(0, 2)
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 400
limit_bottom = 300
limit_smoothed = true
rotation_smoothing_enabled = true

[node name="doorside_camera" type="Camera2D" parent="."]
position = Vector2(0, 2)
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 284
limit_bottom = 303
limit_smoothed = true
rotation_smoothing_enabled = true

[node name="doorside1_camera" type="Camera2D" parent="."]
position = Vector2(0, 2)
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 403
limit_bottom = 328
limit_smoothed = true
rotation_smoothing_enabled = true

[node name="doorside2_camera" type="Camera2D" parent="."]
position = Vector2(0, 2)
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 287
limit_bottom = 360
limit_smoothed = true
rotation_smoothing_enabled = true

[node name="player_hitbox" type="Area2D" parent="."]
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(1, -7)
shape = SubResource("CircleShape2D_qhqgy")

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="healthbar" type="ProgressBar" parent="."]
visible = false
modulate = Color(0.320798, 0.824011, 0, 1)
self_modulate = Color(0.036968, 0.66636, 0.0347833, 1)
offset_left = -8.0
offset_top = -21.0
offset_right = 182.0
offset_bottom = 6.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="regen" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="HurtEffectTimer" type="Timer" parent="."]
one_shot = true

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qhqgy")

[node name="KnockbackTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackHitTimer" type="Timer" parent="."]
one_shot = true

[node name="feedback_timer" type="Timer" parent="."]
one_shot = true

[node name="InteractPrompt" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(1, -26)
scale = Vector2(1.00293, 0.979347)
sprite_frames = SubResource("SpriteFrames_nubpm")
animation = &"pop_up"
speed_scale = 2.5

[node name="feedback_bubble" type="PanelContainer" parent="."]
z_index = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -26.0
offset_right = 3.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.39, 0.39)
theme_override_styles/panel = SubResource("StyleBoxFlat_dqkch")

[node name="feedback_label" type="Label" parent="feedback_bubble"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="timeout" from="regen" to="." method="_on_regen_timeout"]
[connection signal="timeout" from="HurtEffectTimer" to="." method="_on_hurt_effect_timer_timeout"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_knockback_timer_timeout"]
[connection signal="timeout" from="AttackHitTimer" to="." method="_on_attack_hit_timer_timeout"]
[connection signal="timeout" from="feedback_timer" to="." method="_on_feedback_timer_timeout"]
